tooling/nargo_cli/tests/snapshots/execution_success/u16_support/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
fn main(x: u16) {
    test_u16(x);
    // Safety: comment added by `nargo expand`
    unsafe {
        test_u16_unconstrained(x);
    }
}

unconstrained fn test_u16_unconstrained(x: u16) {
    test_u16(x)
}

fn test_u16(x: u16) {
    let t1: u16 = 1234_u16;
    let t2: u16 = 4321_u16;
    let t: u16 = t1 + t2;
    let t4: u16 = t - t2;
    assert(t4 == t1);
    let mut small_int: u16 = x as u16;
    let shift: u16 = small_int << (x as u8);
    assert(shift == 8_u16);
    assert((shift >> (x as u8)) == small_int);
    assert((shift >> 15_u8) == 0_u16);
    assert((shift << 15_u8) == 0_u16);
}
